@@ -72,7 +72,8 @@ Options useful in the org.chameleon.Boot.plist file:
                             ignore /E/E and /S/L/E/Extensions.mkext.
 
   GraphicsEnabler=Yes|No  Automatic device-properties generation for gfx cards.
-    AtiConfig=<cardcfg>   Use a different card config
+    AtiConfig=<cardcfg>   Use a different card config, e.g. AtiConfig=Megalodon.
+    AtiPorts=<value>      Specify the number of ports, e.g. AtiPorts=2.
     UseAtiROM=Yes|No      Use an alternate Ati ROM image
                             (path: /Extra/<vendorid>_<devid>_<subsysid>.rom)
     UseNvidiaROM=Yes|No   Use an alternate Nvidia ROM image
